--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.6",
     "typed.js": "^2.0.12"
   },
   "devDependencies": {
